--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@oclif/command": "^1",
     "@oclif/config": "^1",
-    "@oclif/plugin-help": "^3"
+    "@oclif/plugin-help": "^3",
+    "cli-ux": "^5.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -20,7 +21,7 @@
     "chai": "^4",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
-    "mocha": "^5",
+    "mocha": "^9.1.1",
     "nyc": "^14"
   },
   "engines": {
@@ -28,6 +29,8 @@
   },
   "files": [
     "/bin",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json",
     "/src"
   ],
   "homepage": "https://github.com/danielchristiancazares/gitool",
@@ -37,12 +40,17 @@
   "license": "MIT",
   "main": "src/index.js",
   "oclif": {
-    "bin": "gitool"
+    "bin": "gitool",
+    "commands": "./src/commands",
+    "plugins": [
+      "@oclif/plugin-help"
+    ]
   },
   "repository": "danielchristiancazares/gitool",
   "scripts": {
+    "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint .",
-    "prepack": "oclif-dev readme",
+    "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
     "version": "oclif-dev readme && git add README.md"
   }
