--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "axios": "^0.21.4",
-    "cli-ux": "^5.6.3"
+    "cli-ux": "^5.6.3",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
