--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "keywords": [
     "oclif"
   ],
-  "license": "Apache",
+  "license": "Apache-2.0",
   "main": "src/index.js",
   "oclif": {
     "bin": "gitool",
